<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".NuevoLibro">

    <TextView
        android:id="@+id/tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t_nuevolibro"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <LinearLayout
        android:id="@+id/layou1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tit">
        <TextView
            android:id="@+id/etiqueta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/tit"/>

        <EditText
            android:id="@+id/edititulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layou2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layou1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/aut"/>

        <EditText
            android:id="@+id/editautor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layou3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layou2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/isbn"/>

        <EditText
            android:id="@+id/editisbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layou4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layou3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/edit"/>

        <EditText
            android:id="@+id/editeditorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layou5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layou4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/pag"/>
        <EditText
            android:id="@+id/editpag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20dp" />
        <CheckBox
            android:id="@+id/leido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leido"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layou5">
        <Button
            android:id="@+id/insertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26dp"
            android:text="@string/insert"
            android:layout_weight="3"
            android:onClick="insertar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="26dp"
            android:layout_weight="3"
            android:onClick="cancelar"/>
    </LinearLayout>

    <Button
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/layou1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/layou1"
        android:layout_marginBottom="64dp"
        android:text="@string/volver"
        android:textSize="30dp"
        android:onClick="volver"/>
</RelativeLayout>