<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/t_principal"
        android:textSize="30dp"/>
    <Button
        android:id="@+id/b_bbdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titulo"
        android:text="@string/b_bbdd"
        android:textSize="26dp"
        android:layout_marginTop="50dp"
        android:onClick="bbdd"/>
    <Button
        android:id="@+id/b_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/b_bbdd"
        android:text="@string/multimedia"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:onClick="multi"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="89dp"
        android:layout_marginEnd="51dp"
        android:text="@string/salir"
        android:textSize="26dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="51dp"
        android:onClick="salir"/>

</RelativeLayout>